2014-02-02 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * fixed coveralls badge
  * fixed some specs for ruby 2.0
  * removed dead code from lib/oval/collection.rb
  * fixed build-puppet-module script
  * initial commit