@@ -1,4 +1,5 @@
 2014-02-02 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+  * fixed .travis.yml to reduce matrix size
   * fixed coveralls badge
   * fixed some specs for ruby 2.0
   * removed dead code from lib/oval/collection.rb
